[project]
name = "vendoor-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "httpx>=0.28.1",
    "mcp>=1.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]


[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["ruff>=0.12.2"]
